--- a/package.json
+++ b/package.json
@@ -2,11 +2,17 @@
   "name": "colorify-log",
   "version": "1.0.0",
   "description": "A library for colored log",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "prepare": "npm run build"
   },
   "keywords": [],
   "author": "Tushar Bhatt <tusharbhatt0135@gmail.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "typescript": "^5.3.2"
+  },
+  "files":["lib/**/*"]
 }
